# Portfolio

./: .gitignore  README.md
Portfolio/Band Defense(capstone project made in 30 weeks)/: About.txt
Portfolio/Band Defense(capstone project made in 30 weeks)/Band Defense/: lanes.txt
Portfolio/BattleShip Personal Challenge/: Readme.txt
Portfolio/BattleShip Personal Challenge/Battleship/: ._src  CMakeLists.txt
Portfolio/BattleShip Personal Challenge/Battleship/src/: ._GameManager.cpp  ConsoleApplication1.cpp  GameManager.cpp  GameManager.h  Makefile  cmake_install.cmake  coords.cpp  coords.h  myproject  ship.cpp  ship.h
Portfolio/Cube Commander/: Meshes.res  Readme.txt  Screenshot 2024-11-17 220038.png.import  Screenshot 2024-11-17 220118.png.import  Screenshot 2024-11-17 220509.png.import  Screenshot 2024-11-17 221015.png.import  export_presets.cfg  icon.svg.import  project.godot
Portfolio/Cube Commander/Builds/: Cube Commander v1.0.apple-touch-icon.png.import  Cube Commander v1.0.icon.png.import  Cube Commander v1.0.png.import  index.html
Portfolio/Cube Commander/Material/: enemy unit.tres  ground.tres  unit.tres
Portfolio/Cube Commander/Meshes/: Tower.dae  Tower.dae.import  flag.dae  flag.dae.import  flag.res  grass.res  tower 2.res  tower.res
Portfolio/Cube Commander/Models/: Cube.001 Base Color.png.import  Cube.002 Base Color.png.import  Cube.003 Base Color.png.import  (+19 more)
Portfolio/GGJ2021/: About.txt.txt
Portfolio/Global Game Jam Project/: About.txt
Portfolio/Spinepig Slingshot(4 hour game jam project)/: About.txt
Portfolio/Warp/: About.txt
(+289 files in other folders)
